--- a/PoitteServer/Gemfile
+++ b/PoitteServer/Gemfile
@@ -48,3 +48,6 @@ end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
+
+gem 'webpacker', '3.5.0'
+gem 'react-rails'
